docs/pages/versions/v54.0.0/sdk/sqlite.mdx
---
title: SQLite
description: 一个通过 SQLite API 提供可查询数据库访问的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-54/packages/expo-sqlite'
packageName: 'expo-sqlite'
iconUrl: '/static/images/packages/expo-sqlite.png'
platforms: ['android', 'ios', 'macos', 'tvos', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { DiffBlock } from '~/ui/components/Snippet';
import { Step } from '~/ui/components/Step';

`expo-sqlite` 让你的应用能够访问一个可通过 SQLite API 查询的数据库。该数据库会在应用重启后持续保留。

> **警告** 在 Apple TV 上，底层数据库文件位于 caches 目录，而不是应用的 documents 目录，详见 [Apple 平台指南](https://github.com/react-native-tvos/react-native-tvos/issues/68#issuecomment-628327676)。

## 安装

<APIInstallSection />

## 在 app 配置中进行配置

如果你的项目使用了配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用内置的 [配置插件](/config-plugins/introduction/) 为 `expo-sqlite` 配置高级选项。该插件允许你配置一些无法在运行时设置、且需要重新构建新的应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-sqlite",
        {
          "enableFTS": true,
          "useSQLCipher": true,
          "android": {
            // 覆盖 Android 的共享配置
            "enableFTS": false,
            "useSQLCipher": false
          },
          "ios": {
            // 你也可以覆盖 iOS 的共享配置
            "customBuildFlags": ["-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"]
          }
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'customBuildFlags',
      description: '要传递给 SQLite 构建过程的自定义构建标志。',
    },
    {
      name: 'enableFTS',
      description:
        '是否启用 [FTS3, FTS4](https://www.sqlite.org/fts3.html) 和 [FTS5](https://www.sqlite.org/fts5.html) 扩展。',
      default: 'true',
    },
    {
      name: 'useSQLCipher',
      description:
        '使用 [SQLCipher](https://www.zetetic.net/sqlcipher/) 的实现，而不是默认的 SQLite。',
      default: 'false',
    },
    {
      name: 'withSQLiteVecExtension',
      description:
        '将 [sqlite-vec](https://github.com/asg017/sqlite-vec) 扩展包含到 [`bundledExtensions`](#sqlitebundledextensions) 中。',
      default: 'false',
    },
  ]}
/>

## Web 设置

> **重要** Web 支持处于 alpha 阶段，可能不稳定。如果你遇到任何问题，请在 [GitHub 上创建 issue](https://github.com/expo/expo/issues)。

要在 Web 上使用 `expo-sqlite`，你需要配置 Metro 打包器以支持 **wasm** 文件，并添加 HTTP 标头以允许使用 [`SharedArrayBuffer`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer)。

将以下配置添加到你的 **metro.config.js** 中。如果你还没有 **metro.config.js**，可以运行 `npx expo customize metro.config.js`。[了解更多](/guides/customizing-metro/)。

<DiffBlock source="/static/diffs/sqlite-web-metro-config.diff" />

如果你将应用部署到 Web 托管服务，还需要在 Web 服务器上添加 `Cross-Origin-Embedder-Policy` 和 `Cross-Origin-Opener-Policy` 标头。[了解 `COEP`、`COOP` 标头以及 `SharedArrayBuffer` 的更多信息](https://developer.chrome.com/blog/enabling-shared-array-buffer/)。

## 使用

从 `expo-sqlite` 导入模块。

```js 从 expo-sqlite 导入模块
import * as SQLite from 'expo-sqlite';
```

### 基本 CRUD 操作

```js 基本 CRUD 操作
const db = await SQLite.openDatabaseAsync('databaseName');

// `execAsync()` 适用于批量查询，当你希望一次性执行它们时。
// 注意，`execAsync()` 不会转义参数，可能导致 SQL 注入。
await db.execAsync(`
PRAGMA journal_mode = WAL;
CREATE TABLE IF NOT EXISTS test (id INTEGER PRIMARY KEY NOT NULL, value TEXT NOT NULL, intValue INTEGER);
INSERT INTO test (value, intValue) VALUES ('test1', 123);
INSERT INTO test (value, intValue) VALUES ('test2', 456);
INSERT INTO test (value, intValue) VALUES ('test3', 789);
`);

// `runAsync()` 适用于你想执行一些写操作时。
const result = await db.runAsync('INSERT INTO test (value, intValue) VALUES (?, ?)', 'aaa', 100);
console.log(result.lastInsertRowId, result.changes);
await db.runAsync('UPDATE test SET intValue = ? WHERE value = ?', 999, 'aaa'); // 从可变参数中绑定未命名参数
await db.runAsync('UPDATE test SET intValue = ? WHERE value = ?', [999, 'aaa']); // 从数组中绑定未命名参数
await db.runAsync('DELETE FROM test WHERE value = $value', { $value: 'aaa' }); // 从对象中绑定命名参数

// `getFirstAsync()` 适用于你想从数据库中获取单行数据时。
const firstRow = await db.getFirstAsync('SELECT * FROM test');
console.log(firstRow.id, firstRow.value, firstRow.intValue);

// `getAllAsync()` 适用于你想将所有结果作为对象数组获取时。
const allRows = await db.getAllAsync('SELECT * FROM test');
for (const row of allRows) {
  console.log(row.id, row.value, row.intValue);
}

// `getEachAsync()` 适用于你想迭代 SQLite 查询游标时。
for await (const row of db.getEachAsync('SELECT * FROM test')) {
  console.log(row.id, row.value, row.intValue);
}
```

### 预编译语句

预编译语句允许你只编译一次 SQL 查询，然后使用不同参数多次执行。它们会自动转义输入参数以防御 SQL 注入攻击，因此推荐用于包含用户输入的查询。你可以通过在数据库实例上调用 [`prepareAsync()`](#prepareasyncsource) 或 [`prepareSync()`](#preparesyncsource) 方法来获取预编译语句。预编译语句可以通过调用 [`executeAsync()`](#executeasyncparams) 或 [`executeSync()`](#executesyncparams) 方法来完成 CRUD 操作。

> **注意：** 在使用完语句后，记得调用 [`finalizeAsync()`](#finalizeasync) 或 [`finalizeSync()`](#finalizesync) 方法来释放预编译语句。建议使用 `try-finally` 代码块来确保预编译语句被最终释放。

```ts 预编译语句
const statement = await db.prepareAsync(
  'INSERT INTO test (value, intValue) VALUES ($value, $intValue)'
);
try {
  let result = await statement.executeAsync({ $value: 'bbb', $intValue: 101 });
  console.log('bbb and 101:', result.lastInsertRowId, result.changes);

  result = await statement.executeAsync({ $value: 'ccc', $intValue: 102 });
  console.log('ccc and 102:', result.lastInsertRowId, result.changes);

  result = await statement.executeAsync({ $value: 'ddd', $intValue: 103 });
  console.log('ddd and 103:', result.lastInsertRowId, result.changes);
} finally {
  await statement.finalizeAsync();
}

const statement2 = await db.prepareAsync('SELECT * FROM test WHERE intValue >= $intValue');
try {
  const result = await statement2.executeAsync<{ value: string; intValue: number }>({
    $intValue: 100,
  });

  // `getFirstAsync()` 适用于你想从数据库中获取单行数据时。
  const firstRow = await result.getFirstAsync();
  console.log(firstRow.id, firstRow.value, firstRow.intValue);

  // 将 SQLite 查询游标重置到起始位置，以便下一次 `getAllAsync()` 调用。
  await result.resetAsync();

  // `getAllAsync()` 适用于你想将所有结果作为对象数组获取时。
  const allRows = await result.getAllAsync();
  for (const row of allRows) {
    console.log(row.value, row.intValue);
  }

  // 将 SQLite 查询游标重置到起始位置，以便下一次 `for-await-of` 循环。
  await result.resetAsync();

  // 结果对象本身也是一个异步可迭代对象。你可以在 `for-await-of` 循环中使用它来迭代 SQLite 查询游标。
  for await (const row of result) {
    console.log(row.value, row.intValue);
  }
} finally {
  await statement2.finalizeAsync();
}
```

### `useSQLiteContext()` 钩子

```tsx useSQLiteContext() hook
import { SQLiteProvider, useSQLiteContext, type SQLiteDatabase } from 'expo-sqlite';
import { useEffect, useState } from 'react';
import { View, Text, StyleSheet } from 'react-native';

export default function App() {
  return (
    <View style={styles.container}>
      <SQLiteProvider databaseName="test.db" onInit={migrateDbIfNeeded}>
        <Header />
        <Content />
      </SQLiteProvider>
    </View>
  );
}

export function Header() {
  const db = useSQLiteContext();
  const [version, setVersion] = useState('');
  useEffect(() => {
    async function setup() {
      const result = await db.getFirstAsync<{ 'sqlite_version()': string }>(
        'SELECT sqlite_version()'
      );
      setVersion(result['sqlite_version()']);
    }
    setup();
  }, []);
  return (
    <View style={styles.headerContainer}>
      <Text style={styles.headerText}>SQLite 版本：{version}</Text>
    </View>
  );
}

interface Todo {
  value: string;
  intValue: number;
}

export function Content() {
  const db = useSQLiteContext();
  const [todos, setTodos] = useState<Todo[]>([]);

  useEffect(() => {
    async function setup() {
      const result = await db.getAllAsync<Todo>('SELECT * FROM todos');
      setTodos(result);
    }
    setup();
  }, []);

  return (
    <View style={styles.contentContainer}>
      {todos.map((todo, index) => (
        <View style={styles.todoItemContainer} key={index}>
          <Text>{`${todo.intValue} - ${todo.value}`}</Text>
        </View>
      ))}
    </View>
  );
}

async function migrateDbIfNeeded(db: SQLiteDatabase) {
  const DATABASE_VERSION = 1;
  let { user_version: currentDbVersion } = await db.getFirstAsync<{ user_version: number }>(
    'PRAGMA user_version'
  );
  if (currentDbVersion >= DATABASE_VERSION) {
    return;
  }
  if (currentDbVersion === 0) {
    await db.execAsync(`
PRAGMA journal_mode = 'wal';
CREATE TABLE todos (id INTEGER PRIMARY KEY NOT NULL, value TEXT NOT NULL, intValue INTEGER);
`);
    await db.runAsync('INSERT INTO todos (value, intValue) VALUES (?, ?)', 'hello', 1);
    await db.runAsync('INSERT INTO todos (value, intValue) VALUES (?, ?)', 'world', 2);
    currentDbVersion = 1;
  }
  // if (currentDbVersion === 1) {
  //   添加更多迁移
  // }
  await db.execAsync(`PRAGMA user_version = ${DATABASE_VERSION}`);
}

const styles = StyleSheet.create({
  // 你的样式...
});
```

### 带有 `React.Suspense` 的 `useSQLiteContext()` 钩子

与 [`useSQLiteContext()`](#usesqlitecontext-hook) 钩子一样，你也可以将 [`SQLiteProvider`](#sqliteprovider) 与 [`React.Suspense`](https://react.dev/reference/react/Suspense) 集成，在数据库准备好之前显示一个 fallback 组件。要启用该集成，请向 `SQLiteProvider` 组件传入 `useSuspense` 属性。

```tsx 带有 React.Suspense 的 useSQLiteContext() hook
import { SQLiteProvider, useSQLiteContext } from 'expo-sqlite';
import { Suspense } from 'react';
import { View, Text, StyleSheet } from 'react-native';

export default function App() {
  return (
    <View style={styles.container}>
      <Suspense fallback={<Fallback />}>
        <SQLiteProvider databaseName="test.db" onInit={migrateDbIfNeeded} useSuspense>
          <Header />
          <Content />
        </SQLiteProvider>
      </Suspense>
    </View>
  );
}
```

### 在异步事务中执行查询

```js 在异步事务中执行查询
const db = await SQLite.openDatabaseAsync('databaseName');

await db.withTransactionAsync(async () => {
  const result = await db.getFirstAsync('SELECT COUNT(*) FROM USERS');
  console.log('Count:', result['COUNT(*)']);
});
```

由于 async/await 的特性，任何在事务处于活动状态时运行的查询都会被包含在事务中。这也包括传递给 `withTransactionAsync()` 的作用域函数之外的查询语句，这可能会让人感到意外。例如，下面的测试用例会在传递给 `withTransactionAsync()` 的作用域函数内部和外部运行查询。然而，所有查询都会在实际的 SQL 事务中运行，因为第二个 `UPDATE` 查询是在事务结束之前执行的。

```ts
Promise.all([
  // 1. 一个新的事务开始
  db.withTransactionAsync(async () => {
    // 2. 值 "first" 被插入到测试表中，然后我们等待 2
    //    秒
    await db.execAsync('INSERT INTO test (data) VALUES ("first")');
    await sleep(2000);

    // 4. 两秒后，我们从表中读取最新数据
    const row = await db.getFirstAsync<{ data: string }>('SELECT data FROM test');

    // ❌ 表中的数据将是 "second"，这个断言会失败。
    //    此外，这个断言还会抛出错误并回滚事务，包括下面的 `UPDATE` 查询，因为它是在事务中执行的。
    expect(row.data).toBe('first');
  }),
  // 3. 一秒后，测试表中的数据被更新为 "second"。
  //    这个 `UPDATE` 查询虽然代码在事务外部，但由于执行时事务恰好处于活动状态，因此它仍会在事务中运行。
  sleep(1000).then(async () => db.execAsync('UPDATE test SET data = "second"')),
]);
```

[`withExclusiveTransactionAsync()`](#withexclusivetransactionasynctask) 函数可以解决这个问题。只有在传递给 `withExclusiveTransactionAsync()` 的作用域函数内部运行的查询，才会在实际的 SQL 事务中执行。

### 执行 PRAGMA 查询

```js 执行 PRAGMA 查询
const db = await SQLite.openDatabaseAsync('databaseName');
await db.execAsync('PRAGMA journal_mode = WAL');
await db.execAsync('PRAGMA foreign_keys = ON');
```

> **信息** **提示：** 在创建新数据库时启用 [WAL journal mode](https://www.sqlite.org/wal.html)，通常可以提升性能。

### 导入现有数据库

要使用你已有的 **.db** 文件打开一个新的 SQLite 数据库，你可以使用 [`SQLiteProvider`](#sqliteprovider) 和 [`assetSource`](#assetsource)。

```tsx 使用现有数据库的 useSQLiteContext()
import { SQLiteProvider, useSQLiteContext } from 'expo-sqlite';
import { View, Text, StyleSheet } from 'react-native';

export default function App() {
  return (
    <View style={styles.container}>
      <SQLiteProvider databaseName="test.db" assetSource={{ assetId: require('./assets/test.db') }}>
        <Header />
        <Content />
      </SQLiteProvider>
    </View>
  );
}
```

### 在应用/扩展之间共享数据库（iOS）

要在同一个 App Group 中与其他应用/扩展共享数据库，你可以按照以下步骤使用共享容器：

<Step label="1">

在 app 配置中配置 App Group：

```json app.json
{
  "expo": {
    "ios": {
      "bundleIdentifier": "com.myapp",
      "entitlements": {
        "com.apple.security.application-groups": ["group.com.myapp"]
      }
    }
  }
}
```

</Step>

<Step label="2">

使用 [`expo-file-system`](filesystem/) 库中的 [`Paths.appleSharedContainers`](filesystem/#applesharedcontainers) 来获取共享容器的路径：

```tsx 在 iOS 上使用 Shared Container 存储 SQLite 数据库
import { SQLiteProvider, defaultDatabaseDirectory } from 'expo-sqlite';
import { Paths } from 'expo-file-system';
import { useMemo } from 'react';
import { Platform, View } from 'react-native';

export default function App() {
  const dbDirectory = useMemo(() => {
    if (Platform.OS === 'ios') {
      return Object.values(Paths.appleSharedContainers)?.[0]?.uri;
      // 或者使用 `Paths.appleSharedContainers['group.com.myapp']?.uri` 来选择特定容器
    }
    return defaultDatabaseDirectory;
  }, []);

  return (
    <View style={styles.container}>
      <SQLiteProvider databaseName="test.db" directory={dbDirectory}>
        <Header />
        <Content />
      </SQLiteProvider>
    </View>
  );
}
```

</Step>

### 传递二进制数据

使用 [`Uint8Array`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Uint8Array) 向数据库传递二进制数据：

```ts 传递二进制数据
await db.execAsync(`
DROP TABLE IF EXISTS blobs;
CREATE TABLE IF NOT EXISTS blobs (id INTEGER PRIMARY KEY NOT NULL, data BLOB);
`);

const blob = new Uint8Array([0x00, 0x01, 0x02, 0x03, 0x04, 0x05]);
await db.runAsync('INSERT INTO blobs (data) VALUES (?)', blob);

const row = await db.getFirstAsync<{ data: Uint8Array }>('SELECT * FROM blobs');
expect(row.data).toEqual(blob);
```

### 浏览设备上的数据库

你可以使用 [`drizzle-studio-expo` 开发工具插件](https://github.com/drizzle-team/drizzle-studio-expo) 来检查数据库、对其执行查询并浏览数据。这个插件可以让你直接从 Expo CLI 启动 [Drizzle Studio](https://orm.drizzle.team/drizzle-studio/overview)，并连接到你应用中的数据库。该插件可用于任何 `expo-sqlite` 配置。它不要求你在应用中使用 [Drizzle ORM](#drizzle-orm)。[了解如何安装和使用该插件](https://github.com/drizzle-team/drizzle-studio-expo)。

### 键值存储

`expo-sqlite` 库提供了 [`Storage`](#sqlitestorage)，可作为 [`@react-native-async-storage/async-storage`](https://github.com/react-native-async-storage/async-storage) 库的直接替代。这个键值存储由 SQLite 支持。如果你的项目已经在使用 `expo-sqlite`，你可以直接使用 `expo-sqlite/kv-store`，而无需再添加另一个依赖。

[`Storage`](#sqlitestorage) 提供与 `@react-native-async-storage/async-storage` 相同的 API：

```ts 使用 Store
// 存储 API 是默认导出，你可以将它命名为 Storage、AsyncStorage，或者任何你喜欢的名字。
import Storage from 'expo-sqlite/kv-store';

await Storage.setItem('key', JSON.stringify({ entity: 'value' }));
const value = await Storage.getItem('key');
const entity = JSON.parse(value);
console.log(entity); // { entity: 'value' }
```

使用 `expo-sqlite/kv-store` 的一个主要优点是还新增了同步 API，使用起来更加方便：

```ts 使用带有同步 API 的 Store
// 存储 API 是默认导出，你可以将它命名为 Storage、AsyncStorage，或者任何你喜欢的名字。
import Storage from 'expo-sqlite/kv-store';

Storage.setItemSync('key', 'value');
const value = Storage.getItemSync('key');
```

如果你当前在项目中使用的是 `@react-native-async-storage/async-storage`，切换到 `expo-sqlite/kv-store` 只需修改导入语句即可：

```diff
- import AsyncStorage from '@react-native-async-storage/async-storage';
+ import AsyncStorage from 'expo-sqlite/kv-store';
```

### `localStorage` API

`expo-sqlite/localStorage/install` 模块提供了 [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) API 的直接实现。如果你已经熟悉网页端的这个 API，或者希望在 Web 和其他平台之间共享存储代码，这会很有用。要使用它，你只需要导入 `expo-sqlite/localStorage/install` 模块：

> **注意：** `import 'expo-sqlite/localStorage/install';` 在 Web 上不会执行任何操作，并且会被排除在生产环境的 JS 包之外。

```ts 安装 globalThis.localStorage
import 'expo-sqlite/localStorage/install';

globalThis.localStorage.setItem('key', 'value');
console.log(globalThis.localStorage.getItem('key')); // 'value'
```

## 安全

SQL 注入是一类漏洞，攻击者会诱使你的应用将用户输入当作 SQL 代码执行。你必须对传递给 SQLite 的所有用户输入进行转义，以防御 SQL 注入。[预处理语句](#prepared-statements)是应对这一问题的有效防御手段。它们明确地将 SQL 查询的逻辑与其输入参数分离，而 SQLite 在执行预处理语句时会自动对输入进行转义。

## 第三方库集成

`expo-sqlite` 库旨在成为一个稳固的 SQLite 基础层。它支持与第三方库进行更广泛的集成，以实现更高级的上层功能。以下是一些可与 `expo-sqlite` 一起使用的库。

### Drizzle ORM

[Drizzle](https://orm.drizzle.team/) 是一个 [“无头、类型安全的 TypeScript ORM”](https://orm.drizzle.team/docs/overview)。它可运行于 Node.js、Bun、Deno 和 React Native。它还有一个名为 [`drizzle-kit`](https://orm.drizzle.team/kit-docs/overview) 的 CLI 配套工具，用于生成 SQL 迁移。

查看更多详情，请参阅 [Drizzle ORM 文档](https://orm.drizzle.team/) 和 [`expo-sqlite` 集成指南](https://orm.drizzle.team/docs/get-started/expo-new)。

### Knex.js

[Knex.js](https://knexjs.org/) 是一个 SQL 查询构建器，具有[“灵活、可移植且使用起来很有趣！”](https://github.com/knex/knex) 的特点。

查看更多详情，请参阅 [`expo-sqlite` 集成指南](https://github.com/expo/knex-expo-sqlite-dialect)。

## SQLCipher

> **注意：** [Expo Go](https://expo.dev/go) 不支持 SQLCipher。

[SQLCipher](https://www.zetetic.net/sqlcipher/) 是 SQLite 的一个分支，为数据库增加了加密和身份验证功能。`expo-sqlite` 库支持 Android、iOS 和 macOS 上的 SQLCipher。要使用 SQLCipher，你需要按照 [app 配置中的配置](#configuration-in-app-config) 部分所示，将 `useSQLCipher` 配置添加到你的 **app.json** 中，然后运行 `npx expo prebuild`。

在你打开数据库之后，需要使用 `PRAGMA key = 'password'` 语句为数据库设置密码。

```ts 为数据库添加密码
const db = await SQLite.openDatabaseAsync('databaseName');
await db.execAsync(`PRAGMA key = 'password'`);
```

## API

### 常用 API 速查表

下表总结了 [`SQLiteDatabase`](#sqlitedatabase) 和 [`SQLiteStatement`](#sqlitestatement) 类的常用 API：

| [`SQLiteDatabase`](#sqlitedatabase) 方法      | [`SQLiteStatement`](#sqlitestatement) 方法                                 | 描述                                                                                                                                                            | 使用场景                                                                                                                                                                                   |
| ------------------------------------------------ | ----------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [`runAsync()`](#runasyncsource-params)           | [`executeAsync()`](#executeasyncparams)                                       | 执行 SQL 查询，并返回所做更改的信息。                                                                                                       | 适用于 SQL 写入操作，例如 `INSERT`、`UPDATE`、`DELETE`。                                                                                                                       |
| [`getFirstAsync()`](#getfirstasyncsource-params) | [`executeAsync()`](#executeasyncparams) + [`getFirstAsync()`](#getallasync) | 从查询结果中获取第一行。                                                                                                                         | 适合从数据库中获取单行。例如：`getFirstAsync('SELECT * FROM Users WHERE id = ?', userId)`。                                                            |
| [`getAllAsync()`](#getallasyncsource-params)     | [`executeAsync()`](#executeasyncparams) + [`getFirstAsync()`](#getallasync)   | 一次获取所有查询结果。                                                                                                                                     | 最适合结果集较小的场景，例如带有 LIMIT 子句的查询，如 `SELECT * FROM Table LIMIT 100`，你希望一次性获取全部结果。 |
| [`getEachAsync()`](#geteachasyncsource-params)   | [`executeAsync()`](#executeasyncparams) + `for-await-of` async iterator       | 提供用于遍历结果集的迭代器。此方法会一次从数据库获取一行，与 `getAllAsync()` 相比，可能会减少内存使用。 | 推荐用于逐步处理较大的结果集，例如无限滚动实现。                                                                                 |

<APISection packageName="expo-sqlite" apiName="SQLite" exposeAllClassPropsInSidebar />
